--- a/.github/workflows/optimize.yml
+++ b/.github/workflows/optimize.yml
@@ -40,26 +40,7 @@ jobs:
           [ -d fonts ] && cp -r fonts optimized/ || echo "Fonts directory not found"
           cp -r *.html optimized/ 2>/dev/null || echo "No HTML files found"
 
-      - name: Minify HTML and PHP files
-        run: |
-          cd optimized
-          find . \( -iname "*.html" -o -iname "*.php" \) -type f | while read -r file; do
-            if [ -f "$file" ]; then
-              echo "Minifying $file"
-              html-minifier-terser \
-                --collapse-whitespace \
-                --remove-comments \
-                --remove-optional-tags \
-                --remove-redundant-attributes \
-                --remove-script-type-attributes \
-                --remove-tag-whitespace \
-                --use-short-doctype \
-                --minify-js true \
-                --minify-css true \
-                "$file" \
-                --output "$file"
-            fi
-          done
+      # 🚫 Removed: Minify HTML and PHP files
 
       - name: Purge unused CSS
         run: |
@@ -187,7 +168,7 @@ jobs:
           git add .
           git commit -m "🚀 Optimized website assets
 
-          - Minified HTML, CSS, and JavaScript
+          - Minified CSS and JavaScript
           - Optimized images with WebP conversion
           - Generated responsive images
           - Added lazy loading to images
