--- a/.github/workflows/optimize.yml
+++ b/.github/workflows/optimize.yml
@@ -43,7 +43,15 @@ jobs:
       # 🚫 Removed: Minify HTML and PHP files
       # 🚫 Removed: Purge unused CSS
 
-      
+      - name: Minify CSS
+        run: |
+          cd optimized
+          if [ -d css ]; then
+            find css -iname "*.css" | while read -r file; do
+              echo "Minifying CSS: $file"
+              cleancss --output "$file" "$file"
+            done
+          fi
 
       - name: Minify JavaScript
         run: |
@@ -132,7 +140,7 @@ jobs:
           echo "- Total size: $(du -sh . | cut -f1)" >> optimization-report.md
 
       - name: Configure git to use GITHUB_TOKEN
-        run: git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/pavanij-dev/pranathi-test.git
+        run: git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/pavanij-dev/tamara.git
 
       - name: Commit and push optimized files
         run: |
@@ -163,3 +171,5 @@ jobs:
         with:
           name: optimization-report
           path: optimization-report.md
+
+
